--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/TacioSoares/cursosalura#readme",
   "dependencies": {
     "jason-server": "^3.0.0"
-  }
+  },
+  "devDependencies": {}
 }
